Add visual hierachy for items with bulk volume and weight

--- a/css/water-footprint.css
+++ b/css/water-footprint.css
@@ -47,5 +47,10 @@ header {
 }
 
 .bulk-readout, .serving-readout, .no-info {
-  margin: .625em 0;
+  margin: 1em 0;
+}
+
+.secondary {
+  margin-top: 2em;
+  font-size: 80%;
 }
