--- a/css/got-drought.css
+++ b/css/got-drought.css
@@ -35,3 +35,15 @@
   font-size: 2em;
   line-height: 100%;
 }
+
+.water-footprint .secondary {
+  margin-top: 4em;
+}
+
+.water-footprint .secondary p {
+  font-size: 80%;
+}
+
+.water-footprint .secondary .water-amount {
+  font-size: 1.6em;
+}
