Update color of text in input box

--- a/css/got-drought.css
+++ b/css/got-drought.css
@@ -47,3 +47,7 @@
 #water-footprint-tool .secondary .water-amount {
   font-size: 1.6em;
 }
+
+#water-footprint-tool input[type="text"] {
+  color: black;
+}
